<resources>
    <string name="app_name">Banco-trmaes</string>
    <string name="iniciar_sesion_txt">Iniciar sesión</string>
    <string name="dni">DNI...</string>
    <string name="user_password">Contraseña...</string>
    <string name="entrar_bttn">Entrar</string>
    <string name="salir_bttn">Salir</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bienvenido_a">Bienvenido/a\n</string>
    <string name="icono_avatar">icono avatar</string>
    <string name="floatingbutton">floatingButton</string>
    <string name="posicion_global">POSICIÓN GLOBAL</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="transferencias">TRANSFERENCIAS</string>
    <string name="cambiar_contrasena">CAMBIAR CONTRASEÑA</string>
    <string name="promociones">PROMOCIONES</string>
    <string name="cajeros">CAJEROS</string>
    <string name="salir">SALIR</string>
    <string name="nueva_contrasena">Nueva contrasseña...</string>
    <string name="repetir_contrasena">Repetir contraseña...</string>
    <string name="cambiar_contrasena_validation">Cambiar contraseña</string>
    <string name="elige_tu_cuenta">Elige tu cuenta:</string>
    <string name="transferencias_titulo">Transferencias</string>
    <string name="cuenta_propia">Cuenta propia</string>
    <string name="cuenta_ajena">Cuenta ajena</string>
    <string name="n_mero_de_la_cuenta_destino">Número de la cuenta destino</string>
    <string name="cantidad">Cantidad:</string>
    <string name="enviar_justificante">Enviar justificante</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>