<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TransferActivity">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginStart="16dp"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        android:background="@android:color/transparent"
        style="@style/StyleButtonsBack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transferencias_titulo"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elige_tu_cuenta"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/spinnerCuentas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:popupBackground="@color/design_default_color_surface"/>

        <RadioGroup
            android:id="@+id/groupRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">
            <RadioButton
                android:id="@+id/rButtonCuentaPropia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_propia"
                />

            <RadioButton
                android:id="@+id/rButtonCuentaAjena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_ajena"
                android:layout_marginStart="16dp"/>
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerCuentaDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:popupBackground="@color/design_default_color_surface" />

        <EditText
            android:id="@+id/numCuentaDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_la_cuenta_destino"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad" />

            <EditText
                android:id="@+id/txtEditCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="01"/>

            <Spinner
                android:id="@+id/spinnerDivisas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkJustificante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar_justificante"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/enviarTransfer"
                style="@style/StyleButtons"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/enviar"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelarTransfer"
                style="@style/StyleButtons"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancelar"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>