<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textoLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion_txt"
        android:textAlignment="center"
        android:layout_marginTop="130dp"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:hint="@string/dni"
        android:textColorHint="@android:color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/textoLogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="clear_text"
        app:helperText="Obligatorio"
        app:helperTextTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dniTxtEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPsswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:hint="@string/user_password"
        android:textColorHint="@android:color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/userDni"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:helperText="Obligatorio"
        app:helperTextTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/entrar_bttn"
        android:backgroundTint="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/userPsswd"
        app:layout_constraintStart_toStartOf="@id/userPsswd">

    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/salir_bttn"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/userPsswd"
        app:layout_constraintEnd_toEndOf="@id/userPsswd">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>