<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputNewPsswrd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="88dp"
            android:hint="@string/nueva_contrasena"
            app:endIconMode="password_toggle">
            <!--app:helperTextTextColor="@color/white"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPsswrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInRepPsswrd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="88dp"
            android:hint="@string/repetir_contrasena"
            app:endIconMode="password_toggle">
            <!--app:helperTextTextColor="@color/white"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repNewPsswrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/StyleButtons"
            android:id="@+id/validarContrasea"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/cambiar_contrasena_validation"/>

        <com.google.android.material.button.MaterialButton
            style="@style/StyleButtons"
            android:id="@+id/volverMain"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="Volver"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>